added skills section

--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -2,36 +2,94 @@
 <div ng-controller="MeanController" id="container1">
 
 <div id='main-container'>
-
-
 	<nav>
 		<img src="images/self_logo.png" width='40' height='50' class='self-logo'>
 
 		<div class='links-to-social'>
-			<a href="#"><img src="images/contact_icons-01_mail.png" width='40' height='40'></a>
-			<a href="#"><img src="images/contact_icons-02_github.png" width='40' height='40'></a>
-			<a href="#"><img src="images/contact_icons-03_linkedin.png" width='40' height='40'></a>
+			<a href="#"><img src="images/contact_icons-01_mail.png" width='35' height='35'></a>
+			<a href="#"><img src="images/contact_icons-02_github.png" width='35' height='35'></a>
+			<a href="#"><img src="images/contact_icons-03_linkedin.png" width='35' height='35'></a>
 		</div>
 	</nav>
 
 
 	<div class='title-area'>
-		<span><h1>Aloha</h1></span>
+		<span><h1>Hi, I'm David</h1></span>
 		<div class='title-sayings'>
 			<h4>A Front-End Web Developer</h4>
 			<h4>A Illustrator</h4>
 			<h4>A Designer</h4>
-			<h4>A curious person</h4>
+			<h4>Lover of all things Green Tea!</h4>
 		</div>
-
 	</div>
-
 </div>
+
+
 
 <div id='skills-container'>
-<!-- code here -->
+	<h3>Check out the skills I acquired during my time at a coding bootcamp . . .</h3>
+
+	<div id='code-lang-container-top'>
+		<img src="images/language_icons_javascript.png" width='70' heigth='70'>
+		<img src="images/language_icons_jquery.png" width='70' heigth='70'>
+		<img src="images/language_icons_html5.png" width='70' heigth='70'>
+		<img src="images/language_icons_css.png" width='70' heigth='70'>
+		<img src="images/language_icons_sass.png" width='70' heigth='70'>
+		<img src="images/language_icons_ruby.png" width='70' heigth='70'>
+		<img src="images/language_icons_rails.png" width='70' heigth='70'>
+	</div>
+
+	<div id='code-lang-container-bottom'>
+		<img src="images/language_icons_angular.png" width='70' heigth='70'>
+		<img src="images/language_icons_node.png" width='70' heigth='70'>
+		<img src="images/language_icons_express.png" width='70' heigth='70'>
+		<img src="images/language_icons_mongodb.png" width='70' heigth='70'>
+		<img src="images/language_icons_github.png" width='70' heigth='70'>
+		<img src="images/language_icons_mysql.png" width='70' heigth='70'>
+		<img src="images/language_icons_python.png" width='70' heigth='70'>
+	</div>
+
+	<h3>. . . to go along with my background in art!</h3>
+
+	<div id='code-lang-container-bottom'>
+		<img src="images/language_icons_illustrator.png" width='70' heigth='70'>
+		<img src="images/language_icons_photoshop.png" width='70' heigth='70'>
+		<img src="images/language_icons_drawing.png" width='70' heigth='70'>
+	</div>
+
+	<h3>Psst! Check out my <a href="#">Instagram</a> for art stuff!</h3>
+</div>
+
+
+
+<div id='project-container'>
+
 </div>
 
 
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
