--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,8 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:300);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(https://fonts.googleapis.com/css?family=Exo:100);
 * {
   padding: 0;
   margin: 0; }
+
+a {
+  color: #ff3b3f;
+  text-decoration: none; }
+
+a:hover {
+  color: gray; }
 
 #main-container {
   background-image: url("../images/california_hero_image.jpeg");
@@ -22,7 +30,8 @@ nav {
     margin-left: 50px; }
   nav .links-to-social {
     float: right;
-    margin-right: 30px; }
+    margin-right: 30px;
+    margin-top: 10px; }
     nav .links-to-social img {
       margin-right: 20px; }
     nav .links-to-social img:hover {
@@ -33,18 +42,39 @@ nav {
   margin-left: 50px;
   width: 400px; }
   .title-area h1 {
-    font-family: "Oswald", sans-serif;
-    font-size: 6em;
+    font-family: "Exo", sans-serif;
+    font-size: 3.5em;
     color: white;
     padding: 0px 0px; }
 
 .title-sayings {
-  margin-top: -20px; }
+  margin-top: -10px;
+  margin-left: 5px; }
   .title-sayings h4 {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Exo", sans-serif;
     margin-top: 20px;
     color: white; }
 
 #skills-container {
-  background-color: gray;
+  background-color: white;
+  height: 625px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 100px; }
+  #skills-container h3 {
+    font-family: "Exo", sans-serif;
+    margin: 0 auto;
+    width: 1000px;
+    text-align: center;
+    margin-bottom: 40px; }
+  #skills-container #code-lang-container-top, #skills-container #code-lang-container-bottom {
+    width: 900px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 40px; }
+    #skills-container #code-lang-container-top img, #skills-container #code-lang-container-bottom img {
+      margin: 0px 25px; }
+
+#project-container {
+  background-color: #ccc;
   height: 600px; }
