working on project section

--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -1,6 +1,9 @@
 <!-- MAIN HTML -->
 <div ng-controller="MeanController" id="container1">
 
+
+
+
 <div id='main-container'>
 	<nav>
 		<img src="images/self_logo.png" width='40' height='50' class='self-logo'>
@@ -23,6 +26,9 @@
 		</div>
 	</div>
 </div>
+
+
+
 
 
 
@@ -62,7 +68,59 @@
 
 
 
+
+
+
+
 <div id='project-container'>
+
+
+	<div id='project'>
+		<video autoplay loop muted>
+			<source src="images/hashfighter_demo.mp4" type="video/mp4"  />
+			Your browser does not support HTML5 video.
+		</video>
+
+		<div class='project-description'>
+			<h3>"HashFighters"</h3>
+			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
+			<h4><a href="#">See Case Study</a></h4>
+			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
+		</div>
+	</div>
+
+
+	<div id='project'>
+		<video autoplay loop muted>
+			<source src="images/no_worries_demo.mp4" type="video/mp4"  />
+			Your browser does not support HTML5 video.
+		</video>
+
+		<div class='project-description'>
+			<h3>"HashFighters"</h3>
+			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
+			<h4><a href="#">See Case Study</a></h4>
+			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
+		</div>
+	</div>
+
+
+	<div id='project'>
+		<video autoplay loop muted>
+			<source src="images/codenomnom_demo.mp4" type="video/mp4"  />
+			Your browser does not support HTML5 video.
+		</video>
+
+		<div class='project-description'>
+			<h3>"HashFighters"</h3>
+			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
+			<h4><a href="#">See Case Study</a></h4>
+			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
+		</div>
+	</div>
+
+
+
 
 </div>
 
