--- a/client/stylesheets/style.sass
+++ b/client/stylesheets/style.sass
@@ -119,10 +119,40 @@ nav
 
 
 #project-container
-	background-color: #ccc
-	height: 600px
+	background-color: #e9e9e9
+	height: 1500px
+	padding-top: 70px
+	width: 100%
+	margin: 0 auto
+
+	h3, h4
+		font-family: $font-exo
+		line-height: 40px
+		text-align: left
 
 
+	#project
+		height: 330px
+		//padding: 50px
+		width: 100%
+		margin: 0 auto
+		text-align: center
+		padding: 50px 0px
+		border: 1px solid black
+
+	video
+		width: 600px
+		//border: 1px solid black
+		box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)	
+
+	.project-description
+		width: 480px
+		padding-left: 30px
+		display: inline-block
+		vertical-align: top
+		//border: 1px solid black
+
+		
 
 
 
