--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -74,7 +74,6 @@
 
 <div id='project-container'>
 
-
 	<div id='project'>
 		<video autoplay loop muted>
 			<source src="images/hashfighter_demo.mp4" type="video/mp4"  />
@@ -97,7 +96,7 @@
 		</video>
 
 		<div class='project-description'>
-			<h3>"HashFighters"</h3>
+			<h3>"No Worries"</h3>
 			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
 			<h4><a href="#">See Case Study</a></h4>
 			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
@@ -112,16 +111,31 @@
 		</video>
 
 		<div class='project-description'>
-			<h3>"HashFighters"</h3>
+			<h3>"Coding Nom Nom"</h3>
 			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
 			<h4><a href="#">See Case Study</a></h4>
 			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
 		</div>
 	</div>
 
+</div> <!-- end project-container -->
 
 
 
+
+<div id='last-call-container'>
+
+
+		<h1 align='center' class='aloha_font'>Contact</h1>
+
+
+			<a href="mailto:chentiki808@gmail.com"> <img src="images/contact_icons_red_mail.png" width='30' height='30'> Shoot me a email</a>
+
+
+		
+		<h1 align='center' class='aloha_font much_mahalo' id='much_mahalo'>Much Mahalo!</h1>
+
+	</div>
 </div>
 
 
