--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -77,7 +77,7 @@ nav {
 
 #project-container {
   background-color: #e9e9e9;
-  height: 1500px;
+  height: 1350px;
   padding-top: 70px;
   width: 100%;
   margin: 0 auto; }
@@ -90,8 +90,7 @@ nav {
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    padding: 50px 0px;
-    border: 1px solid black; }
+    padding: 50px 0px; }
   #project-container video {
     width: 600px;
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
@@ -100,3 +99,17 @@ nav {
     padding-left: 30px;
     display: inline-block;
     vertical-align: top; }
+
+#last-call-container {
+  height: 1000px;
+  padding-top: 100px; }
+  #last-call-container h1, #last-call-container li {
+    font-family: "Exo", sans-serif; }
+  #last-call-container li a {
+    vertical-align: middle; }
+  #last-call-container #bottom_contact li a {
+    padding: 20px;
+    border: 1px solid black; }
+  #last-call-container img {
+    vertical-align: middle;
+    padding-right: 20px; }
