--- a/client/stylesheets/style.sass
+++ b/client/stylesheets/style.sass
@@ -120,7 +120,7 @@ nav
 
 #project-container
 	background-color: #e9e9e9
-	height: 1500px
+	height: 1350px
 	padding-top: 70px
 	width: 100%
 	margin: 0 auto
@@ -138,7 +138,7 @@ nav
 		margin: 0 auto
 		text-align: center
 		padding: 50px 0px
-		border: 1px solid black
+		//border: 1px solid black
 
 	video
 		width: 600px
@@ -152,6 +152,25 @@ nav
 		vertical-align: top
 		//border: 1px solid black
 
+
+#last-call-container
+	height: 1000px
+	padding-top: 100px
+
+	h1, li
+		font-family: $font-exo
+
+	li a
+		//border: 1px solid black
+		vertical-align: middle
+
+	#bottom_contact li a
+		padding: 20px
+		border: 1px solid black
+	img
+		//border: 1px solid black
+		vertical-align: middle
+		padding-right: 20px
 		
 
 
