--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -9,9 +9,9 @@
 		<img src="images/self_logo.png" width='40' height='50' class='self-logo'>
 
 		<div class='links-to-social'>
-			<a href="#"><img src="images/contact_icons-01_mail.png" width='35' height='35'></a>
-			<a href="#"><img src="images/contact_icons-02_github.png" width='35' height='35'></a>
-			<a href="#"><img src="images/contact_icons-03_linkedin.png" width='35' height='35'></a>
+			<a href="#" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='35' height='35'></a>
+			<a href="#" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='35' height='35'></a>
+			<a href="#" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='35' height='35'></a>
 		</div>
 	</nav>
 
@@ -63,7 +63,7 @@
 		<img src="images/language_icons_drawing.png" width='70' heigth='70'>
 	</div>
 
-	<h3>Psst! Check out my <a href="#">Instagram</a> for art stuff!</h3>
+	<h3>Psst! Check out my <a href="#" class="hvr-grow">Instagram</a> for art stuff!</h3>
 </div>
 
 
@@ -123,19 +123,20 @@
 
 
 
-<div id='last-call-container'>
-
+<div id='last-call-container' align='center'>
 
 		<h1 align='center' class='aloha_font'>Contact</h1>
 
+		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='30' height='30'>Shoot me an email</a>
 
-			<a href="mailto:chentiki808@gmail.com"> <img src="images/contact_icons_red_mail.png" width='30' height='30'> Shoot me a email</a>
+		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='30' height='30'>Connect with me on LinkedIn</a>
 
+		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='30' height='30'>Check out my GitHub</a>
 
-		
 		<h1 align='center' class='aloha_font much_mahalo' id='much_mahalo'>Much Mahalo!</h1>
 
-	</div>
+
+		<h6 align='center'>&copy Copyright 2016 Designed by David Chen in California</h6>
 </div>
 
 
