--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -129,6 +129,8 @@
 
 		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='30' height='30'>Shoot me an email</a>
 
+		<a href="https://drive.google.com/open?id=0BzDKm18UEO0aU3F6cUxCOExkNlk" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='30' height='30'>View my resume</a>
+
 		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='30' height='30'>Connect with me on LinkedIn</a>
 
 		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='30' height='30'>Check out my GitHub</a>
@@ -142,9 +144,6 @@
 
 
 </div>
-
-
-
 
 
 
