style, and added case study page

--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -9,9 +9,9 @@
 		<img src="images/self_logo.png" width='40' height='50' class='self-logo'>
 
 		<div class='links-to-social'>
-			<a href="#" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='35' height='35'></a>
-			<a href="#" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='35' height='35'></a>
-			<a href="#" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='35' height='35'></a>
+			<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='35' height='35'></a>
+			<a href="https://github.com/chen808" target="_blank" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='35' height='35'></a>
+			<a href="https://www.linkedin.com/in/davidc808" target="_blank" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='35' height='35'></a>
 		</div>
 	</nav>
 
@@ -63,7 +63,7 @@
 		<img src="images/language_icons_drawing.png" width='70' heigth='70'>
 	</div>
 
-	<h3>Psst! Check out my <a href="#" class="hvr-grow">Instagram</a> for art stuff!</h3>
+	<h3>Psst! Check out my <a href="https://www.instagram.com/renzochigga/" target="_blank" class="hvr-grow">Instagram</a> for art stuff!</h3>
 </div>
 
 
@@ -74,47 +74,25 @@
 
 <div id='project-container'>
 
-	<div id='project'>
-		<video autoplay loop muted>
-			<source src="images/hashfighter_demo.mp4" type="video/mp4"  />
-			Your browser does not support HTML5 video.
-		</video>
+	<h1>Projects</h1>
 
-		<div class='project-description'>
+	<div id="project_row_one">
+		<div class='project1'>
 			<h3>"HashFighters"</h3>
 			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
-			<h4><a href="#">See Case Study</a></h4>
-			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
+			<h3><a ng-click='hashfighter()'>See Case Study</a></h3>
 		</div>
-	</div>
 
-
-	<div id='project'>
-		<video autoplay loop muted>
-			<source src="images/no_worries_demo.mp4" type="video/mp4"  />
-			Your browser does not support HTML5 video.
-		</video>
-
-		<div class='project-description'>
-			<h3>"No Worries"</h3>
-			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
-			<h4><a href="#">See Case Study</a></h4>
-			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
+		<div class='project2'>
+			<h3>"NoWorries"</h3>
+			<h4>User is encouraged to write clear recipe-like instructions that attempts to solve a particular code issue.</h4>
+			<h3><a href="#">See Case Study</a></h3>
 		</div>
-	</div>
 
-
-	<div id='project'>
-		<video autoplay loop muted>
-			<source src="images/codenomnom_demo.mp4" type="video/mp4"  />
-			Your browser does not support HTML5 video.
-		</video>
-
-		<div class='project-description'>
+		<div class='project3'>
 			<h3>"Coding Nom Nom"</h3>
-			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
-			<h4><a href="#">See Case Study</a></h4>
-			<h4>Built with: JavaScript, NodeJS, AngularJS, Express, Twitter Api, Adobe Illustrator, Adobe PhotoShop</h4>
+			<h4>User sets a event, completion time, and a emergency contact. If user does not check in before time is up, a text and email will be sent to the contact.</h4>
+			<h3><a href="#">See Case Study</a></h3>
 		</div>
 	</div>
 
@@ -129,11 +107,11 @@
 
 		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='30' height='30'>Shoot me an email</a>
 
-		<a href="https://drive.google.com/open?id=0BzDKm18UEO0aU3F6cUxCOExkNlk" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='30' height='30'>View my resume</a>
+		<a href="https://drive.google.com/open?id=0BzDKm18UEO0aU3F6cUxCOExkNlk" target="_blank" class="hvr-grow"><img src="images/contact_icons-01_mail.png" width='30' height='30'>View my resume</a>
 
-		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='30' height='30'>Connect with me on LinkedIn</a>
+		<a href="https://www.linkedin.com/in/davidc808" target="_blank" class="hvr-grow"><img src="images/contact_icons-03_linkedin.png" width='30' height='30'>Connect with me on LinkedIn</a>
 
-		<a href="mailto:chentiki808@gmail.com" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='30' height='30'>Check out my GitHub</a>
+		<a href="https://github.com/chen808" target="_blank" class="hvr-grow"><img src="images/contact_icons-02_github.png" width='30' height='30'>Check out my GitHub</a>
 
 		<h1 align='center' class='aloha_font much_mahalo' id='much_mahalo'>Much Mahalo!</h1>
 
