--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -13,7 +13,7 @@ a:hover {
   color: #ccc; }
 
 #main-container {
-  background-image: url("../images/california_hero_image.jpeg");
+  background: linear-gradient(rgba(255, 59, 63, 0.7), rgba(255, 59, 63, 0.7)), url("../images/california_hero_image.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 800px; }
@@ -37,12 +37,13 @@ nav {
       margin-right: 20px; }
 
 .title-area {
-  padding-top: 200px;
-  margin-left: 50px;
-  width: 400px; }
+  padding-top: 250px;
+  margin: 0 auto;
+  text-align: center;
+  width: 600px; }
   .title-area h1 {
     font-family: "Exo", sans-serif;
-    font-size: 3.5em;
+    font-size: 5em;
     color: white;
     padding: 0px 0px; }
 
@@ -51,6 +52,7 @@ nav {
   margin-left: 5px; }
   .title-sayings h4 {
     font-family: "Exo", sans-serif;
+    font-size: 1.5em;
     margin-top: 20px;
     color: white; }
 
@@ -76,28 +78,76 @@ nav {
 
 #project-container {
   background-color: #e9e9e9;
-  height: 1350px;
   padding-top: 70px;
-  width: 100%;
-  margin: 0 auto; }
-  #project-container h3, #project-container h4 {
+  padding-bottom: 90px;
+  width: 100%; }
+  #project-container #project_row_one {
+    width: 1200px;
+    margin: 0 auto;
+    margin-top: 70px; }
+  #project-container h1 {
+    font-family: "Exo", sans-serif;
+    font-size: 3.5em;
+    text-align: center; }
+  #project-container h1, #project-container h3, #project-container h4 {
     font-family: "Exo", sans-serif;
     line-height: 40px;
-    text-align: left; }
-  #project-container #project {
-    height: 330px;
-    width: 100%;
-    margin: 0 auto;
+    text-align: center; }
+  #project-container a {
+    color: black; }
+  #project-container a:hover {
+    color: #e9e9e9; }
+  #project-container .project1 {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 27px;
+    width: 300px;
+    height: 280px;
+    padding: 30px;
     text-align: center;
-    padding: 50px 0px; }
+    background: linear-gradient(rgba(255, 59, 63, 0.9), rgba(255, 59, 63, 0.9)), url("../images/hashwarriors_logo.png") no-repeat center; }
+    #project-container .project1 h3 {
+      color: black;
+      text-align: center; }
+    #project-container .project1 h4 {
+      color: white;
+      text-align: center;
+      height: 200px; }
+  #project-container .project2 {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 27px;
+    width: 300px;
+    height: 280px;
+    padding: 30px;
+    text-align: center;
+    background: linear-gradient(rgba(255, 59, 63, 0.9), rgba(255, 59, 63, 0.9)), url("../images/noworries.png") no-repeat center; }
+    #project-container .project2 h3 {
+      color: black;
+      text-align: center; }
+    #project-container .project2 h4 {
+      color: white;
+      text-align: center;
+      height: 200px; }
+  #project-container .project3 {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 27px;
+    width: 300px;
+    height: 280px;
+    padding: 30px;
+    text-align: center;
+    background: linear-gradient(rgba(255, 59, 63, 0.9), rgba(255, 59, 63, 0.9)), url("../images/codenomnom_logo.png") no-repeat center; }
+    #project-container .project3 h3 {
+      color: black;
+      text-align: center; }
+    #project-container .project3 h4 {
+      color: white;
+      text-align: center;
+      height: 200px; }
   #project-container video {
     width: 600px;
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-  #project-container .project-description {
-    width: 480px;
-    padding-left: 30px;
-    display: inline-block;
-    vertical-align: top; }
 
 #last-call-container {
   height: 700px;
