--- a/client/stylesheets/style.sass
+++ b/client/stylesheets/style.sass
@@ -23,11 +23,18 @@ a:hover
 	color: #ccc
 
 
+
+
 #main-container
-	background-image: url("../images/california_hero_image.jpeg")
+	// applying tint color overlay on top image
+	background: linear-gradient(rgba($watermelon-red, .70), rgba($watermelon-red, .70)), url("../images/california_hero_image.jpeg")
+	// background-image: url("../images/california_hero_image.jpeg")
 	background-size: cover
 	background-repeat: no-repeat
 	height: 800px
+
+
+
 
 
 nav
@@ -54,17 +61,16 @@ nav
 
 
 .title-area
-	//margin: 0 auto
-	padding-top: 200px
-	margin-left: 50px
-	// text-align: center
-	width: 400px
-	// border: 1px solid black
+	padding-top: 250px
+	margin: 0 auto
+	text-align: center
+	width: 600px
+	//border: 1px solid black
 
 
 	h1
 		font-family: $font-exo
-		font-size: 3.5em
+		font-size: 5em
 		color: white
 		// border: 5px solid white
 		padding: 0px 0px
@@ -75,6 +81,7 @@ nav
 	margin-left: 5px
 	h4
 		font-family: $font-exo
+		font-size: 1.5em
 		margin-top: 20px
 		color: white
 		// border: 1px solid gray
@@ -116,37 +123,104 @@ nav
 
 #project-container
 	background-color: #e9e9e9
-	height: 1350px
+	//height: 1350px
 	padding-top: 70px
+	padding-bottom: 90px
 	width: 100%
-	margin: 0 auto
+	// margin: 0 auto
 
-	h3, h4
+	#project_row_one
+		width: 1200px
+		margin: 0 auto
+		margin-top: 70px
+		//border: 1px solid black
+
+	h1
+		font-family: $font-exo
+		font-size: 3.5em
+		text-align: center
+
+	h1, h3, h4
 		font-family: $font-exo
 		line-height: 40px
-		text-align: left
-
-
-	#project
-		height: 330px
-		//padding: 50px
-		width: 100%
-		margin: 0 auto
 		text-align: center
-		padding: 50px 0px
+
+	a
+		color: black
+
+	a:hover
+		color: #e9e9e9
+
+	.project1
+		display: inline-block
+		vertical-align: top
+		margin-left: 27px
+		width: 300px
+		height: 280px
+		padding: 30px
+		text-align: center
 		//border: 1px solid black
+		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/hashwarriors_logo.png") no-repeat center
+
+		h3
+			color: black
+			text-align: center
+
+		h4
+			color: white
+			text-align: center
+			height: 200px
+
+	.project2
+		display: inline-block
+		vertical-align: top
+		margin-left: 27px
+		width: 300px
+		height: 280px
+		padding: 30px
+		text-align: center
+		//border: 1px solid black
+		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/noworries.png") no-repeat center
+
+		h3
+			color: black
+			text-align: center
+
+		h4
+			color: white
+			text-align: center
+			height: 200px
+
+
+	.project3
+		display: inline-block
+		vertical-align: top
+		margin-left: 27px
+		width: 300px
+		height: 280px
+		padding: 30px
+		text-align: center
+		//border: 1px solid black
+		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/codenomnom_logo.png") no-repeat center
+
+		h3
+			color: black
+			text-align: center
+
+		h4
+			color: white
+			text-align: center
+			height: 200px
+
+
+
+
 
 	video
 		width: 600px
 		//border: 1px solid black
 		box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)	
 
-	.project-description
-		width: 480px
-		padding-left: 30px
-		display: inline-block
-		vertical-align: top
-		//border: 1px solid black
 
 
 #last-call-container
