--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -77,27 +77,26 @@
 	<h1>Projects</h1>
 
 	<div id="project_row_one">
-		<div class='project1'>
+		<div class='project1 hvr-float'>
 			<h3>"HashFighters"</h3>
 			<h4>Battles are dictated by Twitter hashtags. The first to 100 points wins the battle. The community offers color commentaries through incoming tweets.</h4>
 			<h3><a ng-click='hashfighter()'>See Case Study</a></h3>
 		</div>
 
-		<div class='project2'>
+		<div class='project2 hvr-float'>
 			<h3>"NoWorries"</h3>
-			<h4>User is encouraged to write clear recipe-like instructions that attempts to solve a particular code issue.</h4>
-			<h3><a href="#">See Case Study</a></h3>
+			<h4>User sets a event, completion time, and a emergency contact. If user does not check in before time is up, a text and email will be sent to the contact.</h4>
+			<h3><a ng-click='noworries()'>See Case Study</a></h3>
 		</div>
 
-		<div class='project3'>
+		<div class='project3 hvr-float'>
 			<h3>"Coding Nom Nom"</h3>
-			<h4>User sets a event, completion time, and a emergency contact. If user does not check in before time is up, a text and email will be sent to the contact.</h4>
-			<h3><a href="#">See Case Study</a></h3>
+			<h4>User is encouraged to write clear recipe-like instructions that attempts to solve a particular code issue.</h4>
+			<h3><a ng-click='codingnomnom()'>See Case Study</a></h3>
 		</div>
 	</div>
 
 </div> <!-- end project-container -->
-
 
 
 
