--- a/client/stylesheets/style.sass
+++ b/client/stylesheets/style.sass
@@ -160,7 +160,7 @@ nav
 		padding: 30px
 		text-align: center
 		//border: 1px solid black
-		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/hashwarriors_logo.png") no-repeat center
+		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90))
 
 		h3
 			color: black
@@ -180,7 +180,7 @@ nav
 		padding: 30px
 		text-align: center
 		//border: 1px solid black
-		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/noworries.png") no-repeat center
+		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90))
 
 		h3
 			color: black
@@ -201,7 +201,8 @@ nav
 		padding: 30px
 		text-align: center
 		//border: 1px solid black
-		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/codenomnom_logo.png") no-repeat center
+		background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90))
+		// background: linear-gradient(rgba($watermelon-red, .90), rgba($watermelon-red, .90)), url("../images/codenomnom_logo.png") no-repeat center
 
 		h3
 			color: black
